Fixed first player visible after floating result companion ad not visible

--- a/src/themes/_common/player/player.scss
+++ b/src/themes/_common/player/player.scss
@@ -105,3 +105,7 @@
     }
 }
 
+.#{$cssplayer}-floating.#{$cssplayer}-viewport-desktop {
+    overflow: initial;
+}
+
